--- a/Web/Draco/index.html
+++ b/Web/Draco/index.html
@@ -1,105 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRACO</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tarea 1</title>
+    <link rel="icon" type="image/x-icon" href="zapato.ico">
 </head>
+
+<style>
+    body {
+        background-color: #9e8d77;
+        font-family: "Courier New";
+        color: black;
+    }
+    .espaciado {
+        display: grid;
+        grid-template-columns: 30% 30% 30%;
+    }
+    .espaIMG {
+        display: grid;
+        grid-template-columns: 35% 35% 35%;
+    }
+    .espdesc {
+        display: grid;
+        grid-template-columns: 35% 35% 10%;
+    }
+</style>
+
 <body>
-    <header>
-        <div>
-            <ul>
-                <button type="button">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <line x1="4" y1="6" x2="20" y2="6" stroke-linecap="round"/>
-                        <line x1="4" y1="10" x2="20" y2="10" stroke-linecap="round"/>
-                        <line x1="4" y1="14" x2="20" y2="14" stroke-linecap="round"/>
-                        <line x1="4" y1="18" x2="20" y2="18" stroke-linecap="round"/>
-                        </svg>
-                        Menú
-                </button>
-                <button>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <circle cx="10" cy="10" r="6" stroke-linecap="round" stroke-linejoin="round"/>
-                        <line x1="14.5" y1="14.5" x2="20" y2="20" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        Buscar
-                </button>
-            </ul>
-        </div>
-        <div class="header-center">
-            <a href='#'>
-            <img src="Logos/logo_draco.png" alt="" width="30%" style="filter: invert(100%)">
-          </a>
-        </div>
-        <div>
-            <ul>
-                <button>Contactar</button>
-                <button>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <circle cx="12" cy="8" r="4" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M4 20C4 16.6863 7.58172 14 12 14C16.4183 14 20 16.6863 20 20" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                </button>
-                <button>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <path d="M6 8L4 20H20L18 8H6Z" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M9 8V6C9 4.34315 10.3431 3 12 3C13.6569 3 15 4.34315 15 6V8" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                </button>
-            </ul>
-        </div>
-    </header>
-
-    <div class="video-container">
-    <video src="video_draco2.mp4" type="video/mp4" autoplay loop ></video>
-  </div>
-    <div class="overlay">
-        <h1>DRACO</h1>
-        <h3>ZAPATOS DE ALTA GAMA</h3>
-      <a href="landingPage.html">
-        <button>VER MAS</button>
-      </a>
-        </div>
-
-<section class="content-below-video">
-   <h2>Explora nuestros mejores modelos</h2>
-</section>
-
-           <section class="contenido">
-
-             <!-- Item Zapatos Classic -->
-             <div class="item">
-               <img src="Imagenes/Zapatos2-removebg-preview.png" alt="Imagen 1">
-               <p class="descripcion">Classic</p>
-               <!-- El botón que al hacer click llama a la funcion "reproducir()" -->
-               <button onclick="reproducir('CancionTelecaster')">Ver</button>
-             </div>
-
-             <!-- Item Zapatos ¨Mosley" -->
-             <div class="item">
-               <img src="Imagenes/Zapatos3-removebg-preview.png" alt="Imagen 1">
-               <p class="descripcion">Mosley</p>
-               <!-- El botón que al hacer click llama a la funcion "reproducir()" -->
-               <button onclick="reproducir('CancionTelecaster')">Ver</button>
-             </div>
-
-             <!-- Item Zapatos ¨Prince" -->
-             <div class="item">
-               <img src="Imagenes/Zapatos4-removebg-preview.png" alt="Imagen 1">
-               <p class="descripcion">Prince</p>
-               <!-- El botón que al hacer click llama a la funcion "reproducir()" -->
-               <button onclick="reproducir('CancionTelecaster')">Ver</button>
-             </div>
-
-             <!-- Item Zapatos ¨Lagoon" -->
-             <div class="item">
-               <img src="Imagenes/Zapatos6-removebg-preview.png" alt="Imagen 1">
-               <p class="descripcion">Lagoon</p>
-               <!-- El botón que al hacer click llama a la funcion "reproducir()" -->
-               <button onclick="reproducir('CancionTelecaster')">Ver</button>
-             </div>
+    <div class="espaciado">
+        <img src="logo_zapato.webp" width="104" height="142">
+        <h1>Draco</h1>
+    </div>
+    <div class="espaciado">
+        <h3>Hombre</h3>
+        <h3>Mujer</h3>
+    </div>
+    <div>
+        <h4>Catalogo</h4>
+    </div>
+    <div class="espaIMG">
+        <img src="zapato_1.jpg" width="300" height="300">
+        <img src="zapato_2.jpg" width="300" height="300">
+        <img src="zapato_3.jpg" width="300" height="300">
+    </div>
+    <div class="espdesc">
+        <div><h5>Modernus era   <canvas id="myCanvas" width="10" height="10" style="border: 2px solid #000; background: black;"></canvas></h5></div>
+        <div><h5>Contempo   <canvas id="myCanvas" width="10" height="10" style="border: 2px solid maroon; background: maroon;"></canvas></h5></div>
+        <div><h5>Nex blue   <canvas id="myCanvas" width="10" height="10" style="border: 2px solid darkblue; background: darkblue;"></canvas></h5></div>
+    </div>
 
 </body>
 </html>
