--- a/Web/Draco/index.html
+++ b/Web/Draco/index.html
@@ -108,19 +108,45 @@
     </header>
 
     <div class="video-container">
-        <video src="Media/video_draco2.mp4" type="video/mp4" autoplay loop></video>
+        <video src="Media/video_draco2.mp4" autoplay loop ></video>
+        <div class="overlay">
+            <h1>DRACO</h1>
+            <h3>ZAPATOS DE ALTA GAMA</h3>
+            <button><a href="catalogo.html">VER MÁS</a></button>
+        </div>
     </div>
-
-    <div class="overlay">
-        <h1>DRACO</h1>
-        <h3>ZAPATOS DE ALTA GAMA</h3>
-        <a href="catalogo.html">
-            <button>VER MÁS</button>
-        </a>
-    </div>
+    
+    <section class="promo-section">
+      <div class="promo-image">
+        <img src="Media/zapatosgala.png" alt="Zapatos de gala">
+      </div>
+      <div class="promo-text">
+        <h1>EL ARTE DE LA ELEGANCIA COMIENZA EN TUS PASOS.</h1>
+        <p>
+          Inspirados en la distinción y el estilo atemporal, nuestros zapatos de gala combinan un diseño refinado con materiales de primera calidad. El resultado es un calzado que realza tu presencia y convierte cada ocasión especial en un momento inolvidable.
+        </p>
+        <button>Descubrir la Colección</button>
+      </div>
+    </section>
+    
+  
 
     <script src="menu.js"></script>
     <script src="search.js"></script>
     <script src="contacto.js"></script>
 </body>
+
+<footer>
+  <div>
+      <p>&copy; 2025 DRACO - Todos los derechos reservados</p>
+  </div>
+  <div>
+      <ul>
+          <li><a href="#">Términos y condiciones</a></li>
+          <li><a href="#">Política de privacidad</a></li>
+          <li><a href="#">Contacto</a></li>
+      </ul>
+  </div>
+</footer>
+
 </html>
