Cambios laptop     añadir images

--- a/Draco/colecciones.html
+++ b/Draco/colecciones.html
@@ -180,7 +180,7 @@
           </div>
   
           <div class="image-container">
-            <img src="Media/fondobussines.png" alt="Zapato elegante">
+            <img src="Media/fondoheritage.png" alt="Zapato elegante">
             <div class="overlay-text">
               <h2>Colección Modern Heritage</h2>
               <p>Elegancia diaria, sin esfuerzo.</p>
