productos y categorias ajustados

--- a/Draco/colecciones.html
+++ b/Draco/colecciones.html
@@ -114,7 +114,7 @@
             <img src="Media/Zapatos/BussinesMan/CarruselBM2.png" alt="Zapatos Draco" class="hero-image">
             <div class="overlay">
                 <h1>DRACO</h1>
-                <h3>PARA EL HOMBRE MAJESTUOSO</h3>
+                <h3>PARA EL HOMBRE EXCELSIOR</h3>
             </div>
   
         </div>
@@ -130,24 +130,24 @@
             </div>
           </div>
           <div class="productos">
-              <div class="producto">
-                  <img src="Media/Zapatos/BussinesMan/ZapatoBM2.1.jpg" alt="Producto 1">
-                  <h2>Oxford negro clásico</h2>
-                  <p>$10,000.00 MXN</p>
-                  <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/BussinesMan/ZapatoBM1.1.jpg" alt="Producto 2">
+              <a href="product.html?id=producto5" class="producto">
+                <img src="Media/Zapatos/BussinesMan/ZapatoBM2.1.jpg" alt="Oxford negro clásico">
+                <h2>Oxford negro clásico</h2>
+                <p>$10,000.00 MXN</p>
+                <button>Agregar al carrito</button>
+              </a>
+              <a href="product.html?id=producto6" class="producto">
+                  <img src="Media/Zapatos/BussinesMan/ZapatoBM1.1.jpg" alt="Oxford marrón">
                   <h2>Oxford marrón </h2>
                   <p>$8,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/BussinesMan/ZapatoBM3.1.jpg" alt="Producto 3">
+              </a>
+              <a href="product.html?id=producto7" class="producto">
+                  <img src="Media/Zapatos/BussinesMan/ZapatoBM3.1.jpg" alt="Oxford negro estilizado">
                   <h2>Oxford negro estilizado</h2>
                   <p>$12,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
+              </a>
           </div>
   
   
@@ -159,24 +159,24 @@
             </div>
           </div>
           <div class="productos">
-              <div class="producto">
-                  <img src="Media/Zapatos/NocturneDandy/ZapatoND2.1.png" alt="Producto 1">
+              <a href="product.html?id=producto8" class="producto">
+                  <img src="Media/Zapatos/NocturneDandy/ZapatoND2.1.png" alt="Wingtip de charol negro">
                   <h2>Wingtip de charol negro</h2>
                   <p>$10,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/NocturneDandy/ZapatoND1.1.png" alt="Producto 2">
+              </a>
+              <a href="product.html?id=producto9" class="producto">
+                  <img src="Media/Zapatos/NocturneDandy/ZapatoND1.1.png" alt="Oxford/wingtip brillante">
                   <h2>Oxford/wingtip brillante</h2>
                   <p>$12,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/NocturneDandy/ZapatoND3.1.png" alt="Producto 3">
+              </a>
+              <a href="product.html?id=producto10" class="producto">
+                  <img src="Media/Zapatos/NocturneDandy/ZapatoND3.1.png" alt="Oxford de charol negro">
                   <h2>Oxford de charol negro</h2>
                   <p>$8,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
+              </a>
           </div>
   
           <div class="image-container">
@@ -187,24 +187,24 @@
             </div>
           </div>
           <div class="productos">
-              <div class="producto">
-                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH1.1.png" alt="Producto 1">
+              <a href="product.html?id=producto11" class="producto">
+                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH1.1.png" alt="Wingtip café madera">
                   <h2>Wingtip café madera</h2>
                   <p>$10,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH2.1.png" alt="Producto 2">
+              </a>
+              <a href="product.html?id=producto12" class="producto">
+                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH2.1.png" alt="Wingtip vino">
                   <h2>Wingtip vino</h2>
                   <p>$12,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
-              <div class="producto">
-                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH3.1.png" alt="Producto 3">
+              </a>
+              <a href="product.html?id=producto13" class="producto">
+                  <img src="Media/Zapatos/ModernHeritage/ZapatoMH3.1.png" alt="Wingtip café gamúza azul">
                   <h2>Wingtip café gamúza azul</h2>
                   <p>$8,000.00 MXN</p>
                   <button>Agregar al carrito</button>
-              </div>
+              </a>
           </div>
   
       </section>
