--- a/Draco/ceremonia.html
+++ b/Draco/ceremonia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Business</title>
+  <title>Ceremonia</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -109,7 +109,7 @@
 
 <main>
   <section class="categoria-header">
-    <h1>Business</h1>
+    <h1>Ceremonia</h1>
     <p>Zapatos para quienes entienden que el poder se viste.</p>
   </section>
   
