--- a/Draco/Terminos.html
+++ b/Draco/Terminos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wingtip</title>
+  <title>Base DRACO</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -25,11 +25,11 @@
                 <div class="dropdown-overlay" id="dropdownOverlay">
                   <div class="dropdown-menu slide-in" id="dropdownMenu">
                     <button id="closeMenu" class="close-menu-btn">✕</button>
-                    <a href="index.html">Inicio</a>
-                    <a href="categoria.html">Categoría</a>
-                    <a href="colecciones.html">Colecciones</a>
+                    <a href="#">Inicio</a>
+                    <a href="#">Catálogo</a>
+                    <a href="#">Hombre</a>
                     <a href="#">Contacto</a>
-                    <a href="tel:+524436462684">+52 4436 4626 84</a>
+                    <a href="#">+52 800 000 0000</a>
                   </div>
                 </div>
 
@@ -73,16 +73,16 @@
                     <h2>COMUNÍQUESE CON NOSOTROS</h2>
 
                     <p>
-                      <a href="tel:+524436462684">📞 LLÁMENOS +52 4436 4626 84</a><br>
-                      <small>De lunes a sábado de 8:00 a 22:00 (hora centro MX).<br>
-                      Domingo de 9:00 a 20:00 (hora centro MX).</small>
+                      <a href="tel:+528004610560">📞 LLÁMENOS +52 800 461 0560</a><br>
+                      <small>De lunes a sábado de 8:00 a 22:00 (hora del este).<br>
+                      Domingo de 9:00 a 20:00 (hora del este).</small>
                     </p>
 
                     <p>
                       <span style="color: gold;">●</span>
                       <a href="#">CHAT EN VIVO</a><br>
-                      <small>De lunes a sábado de 9:00 a 23:00 (hora centro MX).<br>
-                      Domingo de 10:00 a 21:00 (hora centro MX).</small>
+                      <small>De lunes a sábado de 9:00 a 23:00 (hora del este).<br>
+                      Domingo de 10:00 a 21:00 (hora del este).</small>
                     </p>
 
                     <p>¿Necesita más ayuda?<br>
@@ -90,99 +90,91 @@
                   </div>
                 </div>
 
-                <li id="userWrapper">
-                  <button id="userButton">
-                    <!-- Icono usuario -->
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                      <circle cx="12" cy="8" r="4" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M4 20C4 16.6863 7.58172 14 12 14
-                              C16.4183 14 20 16.6863 20 20"
-                            stroke-linecap="round" stroke-linejoin="round"/>
+                <button>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                        <circle cx="12" cy="8" r="4" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M4 20C4 16.6863 7.58172 14 12 14C16.4183 14 20 16.6863 20 20" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                  </button>
-
-                  <div class="user-overlay" id="userOverlay">
-                    <div class="user-panel">
-                      <button class="close-user" id="closeUser">✕</button>
-
-                      <!-- LOGIN -->
-                      <div id="loginSection">
-                        <h2>Iniciar sesión</h2>
-                        <form id="loginForm">
-                          <label>Usuario<br><input type="text" name="username" required></label>
-                          <label>Contraseña<br><input type="password" name="password" required></label>
-                          <button type="submit">Entrar</button>
-                        </form>
-                        <p><a href="#" id="forgotLink">¿Olvidó su contraseña?</a></p>
-                        <hr>
-                        <p>¿No tienes cuenta? <a href="#" id="registerLink">Regístrate</a></p>
-                      </div>
-
-                      <!-- REGISTER -->
-                      <div id="registerSection" style="display:none;">
-                        <h2>Regístrate</h2>
-                        <form id="registerForm">
-                          <label>Correo electrónico*<br>
-                            <input type="email" name="email" required>
-                          </label>
-                          <label>Usuario*<br>
-                            <input type="text" name="username" required>
-                          </label>
-                          <label>Apellidos (opcional)<br>
-                            <input type="text" name="lastName">
-                          </label>
-                          <label>Contraseña*<br>
-                            <input type="password" name="password" required>
-                          </label>
-                          <label>Confirmar contraseña*<br>
-                            <input type="password" name="confirmPassword" required>
-                          </label>
-                          <label>Número de teléfono (opcional)<br>
-                            <input type="tel" name="phone">
-                          </label>
-                          <label>Talla de zapato MX*<br>
-                            <input type="text" name="shoeSize" required>
-                          </label>
-                          <button type="submit">Crear cuenta</button>
-                        </form>
-                        <p>¿Ya tienes cuenta? <a href="#" id="backToLogin">Iniciar sesión</a></p>
-                      </div>
-
-                      <!-- FORGOT -->
-                      <div id="forgotSection" style="display:none;">
-                        <h2>Recuperar contraseña</h2>
-                        <form id="forgotForm">
-                          <label>Usuario<br><input type="text" name="username" required></label>
-                          <button type="submit">Enviar enlace</button>
-                        </form>
-                        <p>¿Recordaste? <a href="#" id="backToLogin2">Iniciar sesión</a></p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <button id="cartButton" type="button" onclick="window.location.href='cart.html';">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                    <path d="M6 8L4 20H20L18 8H6Z" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M9 8V6C9 4.34315 10.3431 3 12 3C13.6569 3 15 4.34315 15 6V8" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
+                </button>
+                <button>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                        <path d="M6 8L4 20H20L18 8H6Z" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M9 8V6C9 4.34315 10.3431 3 12 3C13.6569 3 15 4.34315 15 6V8" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </button>
             </ul>
         </div>
     </header>
 
+    <main>
+      <section class="about-section">
+        <div class="container">
+          <h1 id="TerminosLegales">Términos Legales y Condiciones</h1>
 
-<main>
-  <section class="categoria-header">
-    <h1>Wingtip</h1>
-    <p>Zapatos para quienes entienden que el poder se viste.</p>
-  </section>
+          <article class="about-block" id="AvisoLegal">
+            <div class="text-content">
+              <h2>Aviso Legal</h2>
+              <p>
+                Este sitio web es propiedad de DRACO. Todos los contenidos, incluyendo textos, imágenes y logotipos, están protegidos por derechos de autor y propiedad intelectual. Queda prohibida su reproducción, distribución o modificación sin autorización expresa.
+              </p>
+            </div>
+            <div class="image-content">
+              <img src="Media/AvisoLegal.webp" alt="Aviso Legal">
+            </div>
+          </article>
 
-  <section class="productos-grid" id="productos-grid">
+          <article class="about-block reverse" id="PoliticaPrivacidad">
+            <div class="text-content">
+              <h2>Política de Privacidad</h2>
+              <p>
+                En DRACO nos comprometemos a proteger su información personal. Todos los datos recopilados se manejan conforme a la normativa vigente y solo se utilizan para fines relacionados con la prestación de nuestros servicios.
+              </p>
+            </div>
+            <div class="image-content">
+              <img src="Media/AvisoLegal.webp" alt="Política de Privacidad">
+            </div>
+          </article>
 
-  </section>
-</main>
+          <article class="about-block" id="PoliticaCookies">
+            <div class="text-content">
+              <h2>Política de Cookies</h2>
+              <p>
+                Utilizamos cookies propias y de terceros para mejorar la experiencia de navegación y ofrecer contenidos personalizados. Al continuar navegando, usted acepta el uso de cookies conforme a esta política.
+              </p>
+            </div>
+            <div class="image-content">
+              <img src="Media/AvisoLegal.webp" alt="Política de Cookies">
+            </div>
+          </article>
+
+          <article class="about-block reverse" id="ConfiguracionCookies">
+            <div class="text-content">
+              <h2>Configuración de Cookies</h2>
+              <p>
+                Usted puede configurar o desactivar las cookies en cualquier momento desde su navegador. También puede gestionar sus preferencias desde nuestro panel de configuración disponible en el sitio.
+              </p>
+            </div>
+            <div class="image-content">
+              <img src="Media/AvisoLegal.webp" alt="Configuración de Cookies">
+            </div>
+          </article>
+
+          <article class="about-block" id="MapaDelSitio">
+            <div class="text-content">
+              <h2>Mapa del Sitio</h2>
+              <p>
+                El mapa del sitio proporciona una visión general de todas las secciones y páginas disponibles en nuestro sitio web, facilitando la navegación y localización de contenidos.
+              </p>
+            </div>
+            <div class="image-content">
+              <img src="Media/AvisoLegal.webp" alt="Mapa del Sitio">
+            </div>
+          </article>
+
+        </div>
+      </section>
+    </main>
+
 
 
 <footer class="footer">
@@ -206,9 +198,9 @@
     </div>
 
     <div class="footer-col">
-      <h4>COMPAÑIA</h4>
+      <h4>COMPANY</h4>
       <ul>
-        <li><a href="About.html#FundacionDraco">Fundación DRACO</a></li>
+        <li><a href="About.html#ConoceDraco">Fundación DRACO</a></li>
         <li><a href="About.html#NuestroGrupo">Nuestro Grupo</a></li>
         <li><a href="About.html#Colaboraciones">Colaboraciones</a></li>
         <li><a href="About.html#Sostenibilidad">Sostenibilidad</a></li>
@@ -217,13 +209,13 @@
     </div>
 
     <div class="footer-col">
-      <h4>TERMINOS LEGALES Y CONDICIONES</h4>
+      <h4>LEGAL TERMS AND CONDITIONS</h4>
       <ul>
-        <li><a href="Terminos.html#AvisoLegal">Aviso Legal</a></li>
-        <li><a href="Terminos.html#PoliticaPrivacidad">Política de Privacidad</a></li>
-        <li><a href="Terminos.html#PoliticaCookies">Política de Cookies</a></li>
-        <li><a href="Terminos.html#ConfiguracionCookies">Configuración de Cookies</a></li>
-        <li><a href="Terminos.html#MapaDelSitio">Mapa del Sitio</a></li>
+        <li><a href="#AvisoLegal">Aviso Legal</a></li>
+        <li><a href="#PoliticaPrivacidad">Política de Privacidad</a></li>
+        <li><a href="#PoliticaCookies">Política de Cookies</a></li>
+        <li><a href="#ConfiguracionCookies">Configuración de Cookies</a></li>
+        <li><a href="#MapaDelSitio">Mapa del Sitio</a></li>
       </ul>
     </div>
   </div>
@@ -242,7 +234,5 @@
 <script src="js/search.js"></script>
 <script src="js/contacto.js"></script>
 <script src="js/hero.js"></script>
-<script src="js/user.js"></script>
-<script type="module" src="js/category.js"></script>
 </body>
 </html>
