--- a/Draco/About.html
+++ b/Draco/About.html
@@ -9,102 +9,175 @@
 </head>
 <body>
 
-    <header>
-        <div>
-            <ul>
-                <button id="menuButton" type="button">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <line x1="4" y1="6" x2="20" y2="6" stroke-linecap="round"/>
-                        <line x1="4" y1="10" x2="20" y2="10" stroke-linecap="round"/>
-                        <line x1="4" y1="14" x2="20" y2="14" stroke-linecap="round"/>
-                        <line x1="4" y1="18" x2="20" y2="18" stroke-linecap="round"/>
-                    </svg>
-                    Menú
+  <header>
+      <div>
+          <ul>
+              <button id="menuButton" type="button">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                      <line x1="4" y1="6" x2="20" y2="6" stroke-linecap="round"/>
+                      <line x1="4" y1="10" x2="20" y2="10" stroke-linecap="round"/>
+                      <line x1="4" y1="14" x2="20" y2="14" stroke-linecap="round"/>
+                      <line x1="4" y1="18" x2="20" y2="18" stroke-linecap="round"/>
+                  </svg>
+                  Menú
+              </button>
+
+              <div class="dropdown-overlay" id="dropdownOverlay">
+                <div class="dropdown-menu slide-in" id="dropdownMenu">
+                  <button id="closeMenu" class="close-menu-btn">✕</button>
+                  <a href="index.html">Inicio</a>
+                  <a href="categoria.html">Categoría</a>
+                  <a href="colecciones.html">Colecciones</a>
+                  <a href="#">Contacto</a>
+                  <a href="tel:+524436462684">+52 4436 4626 84</a>
+                </div>
+              </div>
+
+              <li id="searchWrapper">
+                <button id="searchTrigger" class="search-trigger">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                    <circle cx="10" cy="10" r="6" stroke-linecap="round" stroke-linejoin="round"/>
+                    <line x1="14.5" y1="14.5" x2="20" y2="20" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  Buscar
                 </button>
 
-                <div class="dropdown-overlay" id="dropdownOverlay">
-                  <div class="dropdown-menu slide-in" id="dropdownMenu">
-                    <button id="closeMenu" class="close-menu-btn">✕</button>
-                    <a href="#">Inicio</a>
-                    <a href="#">Catálogo</a>
-                    <a href="#">Hombre</a>
-                    <a href="#">Contacto</a>
-                    <a href="#">+52 800 000 0000</a>
-                  </div>
-                </div>
-
-                <li id="searchWrapper">
-                  <button id="searchTrigger" class="search-trigger">
+                <form id="searchForm" class="search-form" action="busqueda.html" method="get">
+                  <span class="search-icon">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                       xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
                       <circle cx="10" cy="10" r="6" stroke-linecap="round" stroke-linejoin="round"/>
                       <line x1="14.5" y1="14.5" x2="20" y2="20" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                    Buscar
-                  </button>
+                  </span>
+                  <input type="text" name="q" placeholder="Buscar en el sitio..." required />
+                  <button type="button" id="searchClose" class="close-search">✕</button>
+                </form>
+              </li>
+          </ul>
+      </div>
 
-                  <form id="searchForm" class="search-form" action="busqueda.html" method="get">
-                    <span class="search-icon">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <circle cx="10" cy="10" r="6" stroke-linecap="round" stroke-linejoin="round"/>
-                        <line x1="14.5" y1="14.5" x2="20" y2="20" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                    </span>
-                    <input type="text" name="q" placeholder="Buscar en el sitio..." required />
-                    <button type="button" id="searchClose" class="close-search">✕</button>
-                  </form>
-                </li>
-            </ul>
-        </div>
+      <div class="header-center">
+          <a href='index.html'>
+              <img src="Media/Logo/logo_draco.png" alt="" width="30%" style="filter: invert(100%)">
+          </a>
+      </div>
 
-        <div class="header-center">
-            <a href='index.html'>
-                <img src="Media/Logo/logo_draco.png" alt="" width="30%" style="filter: invert(100%)">
-            </a>
-        </div>
+      <div>
+          <ul>
+              <button id="contactButton">Contactar</button>
+              <div class="contact-overlay" id="contactOverlay">
+                <div class="contact-panel">
+                  <button class="close-contact" id="closeContact">✕</button>
+                  <h2>COMUNÍQUESE CON NOSOTROS</h2>
 
-        <div>
-            <ul>
-                <button id="contactButton">Contactar</button>
-                <div class="contact-overlay" id="contactOverlay">
-                  <div class="contact-panel">
-                    <button class="close-contact" id="closeContact">✕</button>
-                    <h2>COMUNÍQUESE CON NOSOTROS</h2>
+                  <p>
+                    <a href="tel:+524436462684">📞 LLÁMENOS +52 4436 4626 84</a><br>
+                    <small>De lunes a sábado de 8:00 a 22:00 (hora centro MX).<br>
+                    Domingo de 9:00 a 20:00 (hora centro MX).</small>
+                  </p>
 
-                    <p>
-                      <a href="tel:+528004610560">📞 LLÁMENOS +52 800 461 0560</a><br>
-                      <small>De lunes a sábado de 8:00 a 22:00 (hora del este).<br>
-                      Domingo de 9:00 a 20:00 (hora del este).</small>
-                    </p>
+                  <p>
+                    <span style="color: gold;">●</span>
+                    <a href="#">CHAT EN VIVO</a><br>
+                    <small>De lunes a sábado de 9:00 a 23:00 (hora centro MX).<br>
+                    Domingo de 10:00 a 21:00 (hora centro MX).</small>
+                  </p>
 
-                    <p>
-                      <span style="color: gold;">●</span>
-                      <a href="#">CHAT EN VIVO</a><br>
-                      <small>De lunes a sábado de 9:00 a 23:00 (hora del este).<br>
-                      Domingo de 10:00 a 21:00 (hora del este).</small>
-                    </p>
+                  <p>¿Necesita más ayuda?<br>
+                  <a href="#">Póngase en contacto con nuestro equipo</a></p>
+                </div>
+              </div>
 
-                    <p>¿Necesita más ayuda?<br>
-                    <a href="#">Póngase en contacto con nuestro equipo</a></p>
+              <li id="userWrapper">
+                <button id="userButton">
+                  <!-- Icono usuario -->
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                    <circle cx="12" cy="8" r="4" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M4 20C4 16.6863 7.58172 14 12 14
+                            C16.4183 14 20 16.6863 20 20"
+                          stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </button>
+
+                <div class="user-overlay" id="userOverlay">
+                  <div class="user-panel">
+                    <button class="close-user" id="closeUser">✕</button>
+
+                    <!-- USER INFO (visible tras login) -->
+                      <div id="userInfoSection" style="display: none;">
+                        <h2>Bienvenido, <span id="userNameDisplay"></span></h2>
+                        <button id="logoutButton">Cerrar sesión</button>
+                      </div>
+
+
+                    <!-- LOGIN -->
+                    <div id="loginSection">
+                      <h2>Iniciar sesión</h2>
+                      <form id="loginForm">
+                        <label>E-mail<br><input type="email" name="username" required></label>
+                        <label>Contraseña<br><input type="password" name="password" required></label>
+                        <button type="submit">Entrar</button>
+                      </form>
+                      <p><a href="#" id="forgotLink">¿Olvidó su contraseña?</a></p>
+                      <hr>
+                      <p>¿No tienes cuenta? <a href="#" id="registerLink">Regístrate</a></p>
+                    </div>
+
+                    <!-- REGISTER -->
+                    <div id="registerSection" style="display:none;">
+                      <h2>Regístrate</h2>
+                      <form id="registerForm">
+                        <label>Correo electrónico*<br>
+                          <input type="email" name="email" required>
+                        </label>
+                        <label>Usuario*<br>
+                          <input type="text" name="username" required>
+                        </label>
+                        <label>Apellidos (opcional)<br>
+                          <input type="text" name="lastName">
+                        </label>
+                        <label>Contraseña*<br>
+                          <input type="password" name="password" required>
+                        </label>
+                        <label>Confirmar contraseña*<br>
+                          <input type="password" name="confirmPassword" required>
+                        </label>
+                        <label>Número de teléfono (opcional)<br>
+                          <input type="tel" name="phone">
+                        </label>
+                        <label>Talla de zapato MX*<br>
+                          <input type="number" name="shoeSize" required>
+                        </label>
+                        <button type="submit">Crear cuenta</button>
+                      </form>
+                      <p>¿Ya tienes cuenta? <a href="#" id="backToLogin">Iniciar sesión</a></p>
+                    </div>
+
+                    <!-- FORGOT -->
+                    <div id="forgotSection" style="display:none;">
+                      <h2>Recuperar contraseña</h2>
+                      <form id="forgotForm">
+                        <label>Usuario<br><input type="text" name="username" required></label>
+                        <button type="submit">Enviar enlace</button>
+                      </form>
+                      <p>¿Recordaste? <a href="#" id="backToLogin2">Iniciar sesión</a></p>
+                    </div>
                   </div>
                 </div>
+              </li>
 
-                <button>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <circle cx="12" cy="8" r="4" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M4 20C4 16.6863 7.58172 14 12 14C16.4183 14 20 16.6863 20 20" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </button>
-                <button>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
-                        <path d="M6 8L4 20H20L18 8H6Z" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M9 8V6C9 4.34315 10.3431 3 12 3C13.6569 3 15 4.34315 15 6V8" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </button>
-            </ul>
-        </div>
-    </header>
+              <button id="cartButton" type="button" onclick="window.location.href='cart.html';">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="black" stroke-width="1.5">
+                  <path d="M6 8L4 20H20L18 8H6Z" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M9 8V6C9 4.34315 10.3431 3 12 3C13.6569 3 15 4.34315 15 6V8" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button>
+          </ul>
+      </div>
+  </header>
 
 
 <main>
@@ -232,5 +305,13 @@
 <script src="js/search.js"></script>
 <script src="js/contacto.js"></script>
 <script src="js/hero.js"></script>
+<script src="js/user.js"></script>
+
+
+<script type="module" src="js/supabaseClient.js"></script>
+<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/loginUsuario.js"></script>
+<script type="module" src="js/registrarUsuario.js"></script>
+<script type="module" src="js/verificarSesion.js"></script>
 </body>
 </html>
